<resources>
    <string name="app_name">intent</string>
    <string name="action_settings">Settings</string>
    <string name="addString">더하기</string>
    <string name="subString">빼기</string>
    <string name="mulString">곱하기</string>
    <string name="divString">나누기</string>
    <string name="calculateString">계산하기</string>
    <string name="title_activity_go_back">GoBackActivity</string>
    <string name="goBackString">돌아가기</string>
</resources>
